--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-parent</artifactId>
-    <version>12</version>
+    <version>16</version>
   </parent>
 
   <artifactId>smallrye-health-parent</artifactId>
@@ -35,7 +35,7 @@
   <properties>
     <version.eclipse.microprofile.config>1.3</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>2.1</version.eclipse.microprofile.health>
-    <version.jboss.servlet>1.0.2.Final</version.jboss.servlet>
+    <version.jakarta.servlet>4.0.3</version.jakarta.servlet>
     <version.smallrye-config>1.5.1</version.smallrye-config>
 
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
@@ -92,9 +92,9 @@
       </dependency>
 
       <dependency>
-        <groupId>org.jboss.spec.javax.servlet</groupId>
-        <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-        <version>${version.jboss.servlet}</version>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${version.jakarta.servlet}</version>
       </dependency>
 
       <dependency>
