--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -60,8 +60,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jboss.spec.javax.servlet</groupId>
-      <artifactId>jboss-servlet-api_3.1_spec</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -86,6 +86,13 @@
       <artifactId>shrinkwrap-resolver-depchain</artifactId>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>18.0</version>
+      <scope>test</scope>
+    </dependency>
+
 
     <dependency>
       <groupId>io.smallrye</groupId>
