--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>mutiny</artifactId>
+      <version>0.5.2</version>
+    </dependency>
   </dependencies>
 
 </project>
