--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
 
   quality:
     needs: [build]
-    if: github.event_name == 'push' && startsWith('smallrye', github.repository)
+    if: github.event_name == 'push' && github.repository == 'smallrye/smallrye-health'
     runs-on: ubuntu-latest
     name: quality
 
@@ -67,4 +67,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-        run: mvn -B verify --file pom.xml -Pcoverage javadoc:javadoc sonar:sonar -Dsonar.projectKey=smallrye_smallrye-health -Dsonar.login=$SONAR_TOKEN
+        run: mvn -B verify --file pom.xml -Pcoverage javadoc:javadoc sonar:sonar -Dsonar.organization=smallrye -Dsonar.projectKey=smallrye_smallrye-health -Dsonar.login=$SONAR_TOKEN -Dmaven.test.failure.ignore=true
