--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <version>2.2.3-SNAPSHOT</version>
 
   <packaging>pom</packaging>
-  <name>SmallRye: MicroProfile Health Parent</name>
+  <name>SmallRye Health: Parent</name>
   <url>http://smallrye.io</url>
 
   <properties>
@@ -66,6 +66,7 @@
     <module>docs</module>
     <module>implementation</module>
     <module>testsuite</module>
+    <module>ui</module>
   </modules>
 
   <dependencyManagement>
@@ -148,12 +149,22 @@
       <!-- Dependencies provided by the project -->
       <dependency>
         <groupId>io.smallrye</groupId>
+        <artifactId>smallrye-health-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.smallrye</groupId>
         <artifactId>smallrye-health</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>io.smallrye</groupId>
         <artifactId>smallrye-health-tck</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.smallrye</groupId>
+        <artifactId>smallrye-health-ui</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
