--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-health-testsuite-parent</artifactId>
+    <artifactId>smallrye-health-parent</artifactId>
     <version>2.2.3-SNAPSHOT</version>
   </parent>
 
