--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,12 @@ jobs:
       - name: build with maven
         run: mvn -B javadoc:javadoc formatter:validate verify --file pom.xml
 
+      - uses: actions/upload-artifact@v2
+        name: tck-report
+        with:
+          name: tck-report
+          path: testsuite/tck/target/surefire-reports
+
   quality:
     needs: [build]
     if: github.event_name == 'push' && github.repository == 'smallrye/smallrye-health'
