--- a/.github/project.yml
+++ b/.github/project.yml
@@ -1,4 +1,4 @@
 name: SmallRye Health
 release:
-  current-version: 2.2.3
-  next-version: 2.2.4-SNAPSHOT
+  current-version: 3.0.0-RC1
+  next-version: 3.0.0-SNAPSHOT
