--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,20 @@
 
   <properties>
     <version.eclipse.microprofile.config>1.4</version.eclipse.microprofile.config>
-    <version.eclipse.microprofile.health>3.0-RC5</version.eclipse.microprofile.health>
+    <version.eclipse.microprofile.health>3.0</version.eclipse.microprofile.health>
     <version.jakarta.servlet>4.0.4</version.jakarta.servlet>
     <version.smallrye-config>1.9.3</version.smallrye-config>
     <version.smallrye-common>1.5.0</version.smallrye-common>
 
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>microprofile-health30-staging</id>
+      <url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1383</url>
+    </repository>
+  </repositories>
 
   <licenses>
     <license>
