--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
   <url>http://smallrye.io</url>
 
   <properties>
-    <version.eclipse.microprofile.config>1.4</version.eclipse.microprofile.config>
+    <version.eclipse.microprofile.config>2.0</version.eclipse.microprofile.config>
     <version.eclipse.microprofile.health>3.0</version.eclipse.microprofile.health>
     <version.jakarta.servlet>4.0.4</version.jakarta.servlet>
-    <version.smallrye-config>1.10.0</version.smallrye-config>
+    <version.smallrye-config>2.0.0-RC3</version.smallrye-config>
     <version.smallrye-common>1.5.0</version.smallrye-common>
 
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
