--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>smallrye-health-parent</artifactId>
     <groupId>io.smallrye</groupId>
-    <version>2.2.6-SNAPSHOT</version>
+    <version>2.2.6</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
