--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-health-parent</artifactId>
-    <version>2.2.6-SNAPSHOT</version>
+    <version>2.2.6</version>
   </parent>
 
   <artifactId>smallrye-health</artifactId>
