--- a/provided-checks/pom.xml
+++ b/provided-checks/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>smallrye-health-parent</artifactId>
     <groupId>io.smallrye</groupId>
-    <version>2.2.6-SNAPSHOT</version>
+    <version>2.2.6</version>
   </parent>
 
   <artifactId>smallrye-health-provided-checks</artifactId>
