--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,20 @@
 
   <properties>
     <version.eclipse.microprofile.config>2.0</version.eclipse.microprofile.config>
-    <version.eclipse.microprofile.health>3.1-RC2</version.eclipse.microprofile.health>
+    <version.eclipse.microprofile.health>3.1</version.eclipse.microprofile.health>
     <version.jakarta.servlet>4.0.4</version.jakarta.servlet>
     <version.smallrye-config>2.3.0</version.smallrye-config>
     <version.smallrye-common>1.6.0</version.smallrye-common>
 
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>health-3.1</id>
+      <url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1469/</url>
+    </repository>
+  </repositories>
 
   <licenses>
     <license>
