--- a/.github/project.yml
+++ b/.github/project.yml
@@ -1,4 +1,4 @@
 name: SmallRye Health
 release:
-  current-version: 3.1.0-RC3
-  next-version: 3.1.0-SNAPSHOT
+  current-version: 3.1.0
+  next-version: 3.2.0-SNAPSHOT
