--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,34 +25,24 @@ jobs:
     strategy:
       matrix:
         java: [8, 11]
-    name: build with jdk ${{matrix.java}}
+    name: Build with JDK ${{matrix.java}}
 
     steps:
-      - uses: actions/checkout@v2
-        name: checkout
-
-      - uses: actions/checkout@v2
-        name: checkout mp health 3.0
+      - uses: actions/cache@v2
         with:
-          repository: eclipse/microprofile-health
-          path: microprofile-health
-
-      - uses: actions/setup-java@v1
-        name: set up jdk ${{matrix.java}}
+          path: ~/.m2/repository
+          key: maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            maven-
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
         with:
-          java-version: ${{matrix.java}}
-          
-      - name: build microprofile health
-        run: |
-          cd microprofile-health
-          mvn install
-          cd ..
-
-      - name: build with maven
-        run: mvn -B javadoc:javadoc formatter:validate verify --file pom.xml
-
+          java-version: ${{ matrix.java }}
+          distribution: temurin
+      - name: Build with Maven
+        run: mvn -B javadoc:javadoc formatter:validate verify
       - uses: actions/upload-artifact@v2
-        name: tck-report
+        name: TCK report
         with:
           name: tck-report
           path: testsuite/tck/target/surefire-reports
