--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '17-ea' ]
+        java: [ '8', '11', '17' ]
     name: Build with JDK ${{matrix.java}}
 
     steps:
