--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,17 +25,41 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '17' ]
-    name: Build with JDK ${{matrix.java}}
+        # To list the available "feature versions" (ignore "tip_version", it's not relevant):
+        # https://api.adoptium.net/v3/info/available_releases
+        # To list the available releases for a given "feature version" (example for 16):
+        # https://api.adoptium.net/v3/assets/latest/16/hotspot
+        java:
+          - { name: "8" }
+          - { name: "11" }
+          - { name: "17" }
+          - { name: "18-ea",
+              download_url: "https://download.java.net/java/early_access/jdk18/30/GPL/openjdk-18-ea+30_linux-x64_bin.tar.gz"}
+
+    name: Build with JDK ${{ matrix.java.name }}
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: Manually download JDK ${{ matrix.java.name }}
+        if: matrix.java.download_url != ''
+        run: wget -O $RUNNER_TEMP/java_package.tar.gz ${{ matrix.java.download_url }}
+      - name: Set up JDK ${{ matrix.java.name }} (manually downloaded)
+        if: matrix.java.download_url != ''
+        uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          distribution: 'jdkfile'
+          jdkFile: ${{ runner.temp }}/java_package.tar.gz
+          java-version: ${{ matrix.java.name }}
+          architecture: x64
+      - name: Set up JDK ${{ matrix.java.name }} (automatically downloaded)
+        if: matrix.java.download_url == ''
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java.name }}
           distribution: temurin
           cache: maven
-      - name: Build with Maven
+          check-latest: true
+      - name: Build and Test with Java ${{ matrix.java.name }}
         run: mvn -B javadoc:javadoc formatter:validate verify
       - uses: actions/upload-artifact@v2
         name: TCK report
