--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+          distribution: temurin
 
       - name: sonar
         env:
