--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 8
+          distribution: temurin
 
       - name: maven release ${{steps.metadata.outputs.current-version}}
         run: |
