--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,7 @@ jobs:
           - { name: "8" }
           - { name: "11" }
           - { name: "17" }
-          - { name: "18-ea",
-              download_url: "https://download.java.net/java/GA/jdk18/43f95e8614114aeaa8e8a5fcf20a682d/36/GPL/openjdk-18_linux-x64_bin.tar.gz"}
+          - { name: "18" }
 
     name: Build with JDK ${{ matrix.java.name }}
 
