--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <version.mutiny>1.4.0</version.mutiny>
     <version.smallrye-config>2.9.2</version.smallrye-config>
     <version.smallrye-common>1.11.0</version.smallrye-common>
+    <version.wildfly>26.0.0.Final</version.wildfly>
 
     <version.smallrye.testing.utilities>1.0.0</version.smallrye.testing.utilities>
 
