--- a/pom.xml
+++ b/pom.xml
@@ -21,24 +21,24 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-parent</artifactId>
+    <artifactId>smallrye-jakarta-parent</artifactId>
     <version>35</version>
   </parent>
 
   <artifactId>smallrye-health-parent</artifactId>
-  <version>3.2.2-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>SmallRye Health: Parent</name>
   <url>http://smallrye.io</url>
 
   <properties>
-    <version.eclipse.microprofile.config>2.0</version.eclipse.microprofile.config>
-    <version.eclipse.microprofile.health>3.1</version.eclipse.microprofile.health>
-    <version.jakarta.servlet>4.0.4</version.jakarta.servlet>
+    <version.eclipse.microprofile.config>3.0.1</version.eclipse.microprofile.config>
+    <version.eclipse.microprofile.health>4.0</version.eclipse.microprofile.health>
+    <version.jakarta.servlet>5.0.0</version.jakarta.servlet>
     <version.mutiny>1.4.0</version.mutiny>
-    <version.smallrye-config>2.9.2</version.smallrye-config>
-    <version.smallrye-common>1.11.0</version.smallrye-common>
+    <version.smallrye-config>3.0.0-RC2</version.smallrye-config>
+    <version.smallrye-common>2.0.0-RC2</version.smallrye-common>
     <version.wildfly>26.0.0.Final</version.wildfly>
 
     <version.smallrye.testing.utilities>1.0.0</version.smallrye.testing.utilities>
@@ -106,20 +106,20 @@
         <version>${version.eclipse.microprofile.health}</version>
         <exclusions>
           <exclusion>
-            <groupId> javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.mail</groupId>
-            <artifactId>mailapi</artifactId>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
