--- a/testsuite/experimental/pom.xml
+++ b/testsuite/experimental/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-health-testsuite-parent</artifactId>
-    <version>3.2.2-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -25,15 +25,21 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.jboss.weld.servlet</groupId>
+      <artifactId>weld-servlet-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <profiles>
     <profile>
-      <id>wildfly-servlet</id>
+      <id>wildfly-preview</id>
       <activation>
         <property>
           <!-- use property rather than activeByDefault, see https://issues.apache.org/jira/browse/MNG-4917 -->
-          <name>!noWildflyServlet</name>
+          <name>!noWildflyPreview</name>
         </property>
       </activation>
       <dependencies>
@@ -53,7 +59,7 @@
                 <jboss.options>${jboss.extra.opts}</jboss.options>
               </systemProperties>
               <environmentVariables>
-                <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
+                <JBOSS_HOME>${project.build.directory}/wildfly-preview-${version.wildfly}</JBOSS_HOME>
               </environmentVariables>
             </configuration>
           </plugin>
@@ -71,7 +77,7 @@
                   <artifactItems>
                     <artifactItem>
                       <groupId>org.wildfly</groupId>
-                      <artifactId>wildfly-servlet-dist</artifactId>
+                      <artifactId>wildfly-preview-dist</artifactId>
                       <version>${version.wildfly}</version>
                       <type>zip</type>
                       <overWrite>false</overWrite>
