--- a/.github/project.yml
+++ b/.github/project.yml
@@ -1,4 +1,4 @@
 name: SmallRye Health
 release:
-  current-version: 3.2.1
-  next-version: 3.2.2-SNAPSHOT
+  current-version: 4.0.0-RC2
+  next-version: 4.0.0-SNAPSHOT
