--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,10 @@
     <version.mutiny>1.7.0</version.mutiny>
     <version.smallrye-config>2.11.1</version.smallrye-config>
     <version.smallrye-common>1.13.0</version.smallrye-common>
+    <version.smallrye.testing.utilities>1.0.0</version.smallrye.testing.utilities>
+    <version.testng>6.14.3</version.testng>
     <version.wildfly>26.1.2.Final</version.wildfly>
 
-    <version.smallrye.testing.utilities>1.0.0</version.smallrye.testing.utilities>
 
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <sonar.coverage.exclusions>testsuite/tck/src/main/java/**/*Servlet.java</sonar.coverage.exclusions>
@@ -96,8 +97,8 @@
             <artifactId>org.osgi.annotation.versioning</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -107,20 +108,20 @@
         <version>${version.eclipse.microprofile.health}</version>
         <exclusions>
           <exclusion>
-            <groupId> javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
           </exclusion>
           <exclusion>
-            <groupId>javax.mail</groupId>
-            <artifactId>mailapi</artifactId>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -144,8 +145,8 @@
         <scope>test</scope>
         <exclusions>
           <exclusion>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
