--- a/pom.xml
+++ b/pom.xml
@@ -21,28 +21,28 @@
 
   <parent>
     <groupId>io.smallrye</groupId>
-    <artifactId>smallrye-parent</artifactId>
+    <artifactId>smallrye-jakarta-parent</artifactId>
     <version>37</version>
   </parent>
 
   <artifactId>smallrye-health-parent</artifactId>
-  <version>3.3.2-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>SmallRye Health: Parent</name>
   <url>http://smallrye.io</url>
 
   <properties>
-    <version.eclipse.microprofile.config>2.0</version.eclipse.microprofile.config>
-    <version.eclipse.microprofile.health>3.1</version.eclipse.microprofile.health>
+    <version.eclipse.microprofile.config>3.0.2</version.eclipse.microprofile.config>
+    <version.eclipse.microprofile.health>4.0</version.eclipse.microprofile.health>
     <version.httpclient>4.5.14</version.httpclient>
-    <version.jakarta.servlet>4.0.4</version.jakarta.servlet>
+    <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
     <version.mutiny>1.8.0</version.mutiny>
-    <version.smallrye-config>2.12.2</version.smallrye-config>
-    <version.smallrye-common>1.13.2</version.smallrye-common>
-    <version.smallrye.testing.utilities>1.0.0</version.smallrye.testing.utilities>
-    <version.testng>6.14.3</version.testng>
-    <version.wildfly>26.1.2.Final</version.wildfly>
+    <version.smallrye-config>3.1.2</version.smallrye-config>
+    <version.smallrye-common>2.0.0</version.smallrye-common>
+    <version.smallrye.testing.utilities>2.2.0</version.smallrye.testing.utilities>
+    <version.testng>7.5</version.testng>
+    <version.wildfly>27.0.0.Alpha4</version.wildfly>
 
 
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
