--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
           - { name: "11" }
           - { name: "17" }
           - { name: "18" }
+          - { name: "19" }
+          - { name: "20-ea" }
 
     name: Build with JDK ${{ matrix.java.name }}
 
