--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -32,7 +32,7 @@ jobs:
 
   integration-verification:
     runs-on: ubuntu-latest
-    name: Integration verfication
+    name: Integration verification
     if: contains(github.event.pull_request.body, 'Breaking change') == false
 
     steps:
@@ -59,8 +59,6 @@ jobs:
           repository: quarkusio/quarkus
 
       - name: Quarkus integration
-        # try wildfly with jakarta release
-        continue-on-error: true
         run: |
           mvn -Dquickly -Dsmallrye-health.version=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
           mvn clean verify -pl extensions/smallrye-health/deployment -Dsmallrye-health.version=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
