--- a/testsuite/experimental/pom.xml
+++ b/testsuite/experimental/pom.xml
@@ -32,6 +32,12 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <profiles>
