--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -30,10 +30,12 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           milestone-title: ${{steps.metadata.outputs.current-version}}
 
-  integration-verification:
+  integration-build-smallrye-health:
     runs-on: ubuntu-latest
-    name: Integration verification
+    name: Integration - Build SmallRye Health
     if: contains(github.event.pull_request.body, 'Breaking change') == false
+    outputs:
+      SNAPSHOT_VERSION: ${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
 
     steps:
       - uses: actions/checkout@v2
@@ -53,16 +55,63 @@ jobs:
           VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
           echo "::set-output name=SNAPSHOT_VERSION::$VERSION"
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: smallrye-health
+          path: ~/.m2/repository/io/smallrye
+
+  integration-verification-quarkus:
+    runs-on: ubuntu-latest
+    name: Integration verification for Quarkus
+    if: contains(github.event.pull_request.body, 'Breaking change') == false
+    needs: integration-build-smallrye-health
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: smallrye-health
+          path: ~/.m2/repository/io/smallrye
+
+      - uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: temurin
+          cache: maven
+
       - uses: actions/checkout@v2
         name: Checkout Quarkus
         with:
           repository: quarkusio/quarkus
 
       - name: Quarkus integration
+        env:
+          SNAPSHOT_VERSION: ${{ needs.integration-build-smallrye-health.outputs.SNAPSHOT_VERSION }}
         run: |
-          mvn -Dquickly -Dsmallrye-health.version=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl extensions/smallrye-health/deployment -Dsmallrye-health.version=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl tcks/microprofile-health -Dtcks -Dsmallrye-health.version=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
+          mvn -Dquickly -Dsmallrye-health.version="$SNAPSHOT_VERSION"
+          mvn clean verify -pl extensions/smallrye-health/deployment -Dsmallrye-health.version="$SNAPSHOT_VERSION"
+          mvn clean verify -pl tcks/microprofile-health -Dtcks -Dsmallrye-health.version="$SNAPSHOT_VERSION"
+
+  integration-verification-wildfly:
+    runs-on: ubuntu-latest
+    name: Integration verification for WildFly
+    if: contains(github.event.pull_request.body, 'Breaking change') == false
+    needs: integration-build-smallrye-health
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: smallrye-health
+          path: ~/.m2/repository/io/smallrye
+
+      - uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: temurin
+          cache: maven
 
       - uses: actions/checkout@v2
         name: Checkout WildFly
@@ -70,12 +119,14 @@ jobs:
           repository: wildfly/wildfly
 
       - name: WildFly integration
+        env:
+          SNAPSHOT_VERSION: ${{ needs.integration-build-smallrye-health.outputs.SNAPSHOT_VERSION }}
         run: |
-          mvn clean install -DskipTests -DskipITs -Denforcer.skip -Dversion.io.smallrye.smallrye-health=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl microprofile/health-smallrye -Dversion.io.smallrye.smallrye-health=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl testsuite/integration/microprofile -Dts.standalone.microprofile -Dversion.io.smallrye.smallrye-health=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl testsuite/integration/microprofile-tck/health -Dts.standalone.microprofile -Dversion.io.smallrye.smallrye-health=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
-          mvn clean verify -pl testsuite/integration/manualmode -Dts.manualmode -Dtest="MicroProfile*" -Dversion.io.smallrye.smallrye-health=${{ steps.version-step.outputs.SNAPSHOT_VERSION }}
+          mvn clean install -DskipTests -DskipITs -Denforcer.skip -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
+          mvn clean verify -pl microprofile/health-smallrye -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
+          mvn clean verify -pl testsuite/integration/microprofile -Dts.standalone.microprofile -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
+          mvn clean verify -pl testsuite/integration/microprofile-tck/health -Dts.standalone.microprofile -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
+          mvn clean verify -pl testsuite/integration/manualmode -Dts.manualmode -Dtest="MicroProfile*" -Dversion.io.smallrye.smallrye-health="$SNAPSHOT_VERSION"
 
 
 
